service.yml
apiVersion: v1
kind: Service
metadata:
  name: static-webpage-service
  namespace: p1
  labels:
    app: static-webpage
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8000"
    prometheus.io/path: "/metrics"
spec:
  selector:
    app: static-webpage
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
  type: NodePort
