ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: static-webpage-ingress
  namespace: p1
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: static-webpage.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: static-webpage-service
                port:
                  number: 80
